tests/good/misc/shorter-count.pas
program ShorterCount;

var i;
begin
    for i := 0 to 8 do
        WriteLn(i)
end.
