tests/bad/global-identifier-redeclare.pas
program global_identifier_redeclare;

type
    Foo = integer;

var
    foo;

begin
end.
